--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "author": "Santiago Gonzalez",
   "license": "MIT",
+  "packageManager": "npm@10.8.2",
   "workspaces": [
     "apps/*"
   ],
-  "scripts": {},
+  "scripts": {
+    "dev": "turbo dev"
+  },
   "devDependencies": {
     "turbo": "^2.0.12"
   }
