--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "apps/*"
   ],
   "scripts": {
-    "dev": "turbo dev"
+    "dev": "turbo dev",
+    "prettier": "npx prettier . --check"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "turbo": "^2.0.12"
   }
 }
