--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "author": "",
   "private": true,
+  "prisma": {},
   "scripts": {
     "build": "nest build",
     "start": "nest start",
-    "dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch --preserveWatchOutput",
+    "dev": "nest start --watch --preserveWatchOutput",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -18,9 +19,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.18.0",
+    "graphql-subscriptions": "^2.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -36,6 +41,7 @@
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.42.0",
     "jest": "^29.5.0",
+    "prisma": "^5.18.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
