setup tanstack router

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,8 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.47.1",
+    "@tanstack/router-plugin": "^1.47.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
