--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,10 +11,13 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-router": "^1.47.1",
     "@tanstack/router-plugin": "^1.47.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "graphql": "^16.9.0",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
