--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.4",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-router": "^1.47.1",
     "@tanstack/router-plugin": "^1.47.0",
@@ -21,8 +24,11 @@
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
+    "react-reverse-portal": "^2.1.2",
     "tailwind-merge": "^2.5.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
