add feedback components

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@apollo/client": "^3.11.4",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-router": "^1.47.1",
     "@tanstack/router-plugin": "^1.47.0",
@@ -25,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-intersection-observer": "^9.13.0",
     "react-reverse-portal": "^2.1.2",
     "tailwind-merge": "^2.5.1",
     "tailwindcss-animate": "^1.0.7",
